Must compile under JDK 1.4. The test case still fails with ClassNotFoundException: org.mule.factory.rmi.MuleRMIFactory
git-svn-id: https://svn.codehaus.org/mule/trunk/mule@3587 bf997673-6b11-0410-b953-e057580c5b09